// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BrandLink /> should adopt the "showNameBreakpoint" prop 1`] = `
.c0 {
  display: block;
  height: 2.5rem;
  width: 2.5rem;
  color: #fff;
  overflow: hidden;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (min-width:100px) {
  .c0 {
    width: 100%;
  }
}

<a
  className="c0"
  href="/"
  title="← Back to the homepage"
/>
`;

exports[`<BrandLink /> should render and match the snapshot 1`] = `
.c0 {
  display: block;
  height: 2.5rem;
  width: 2.5rem;
  color: #fff;
  overflow: hidden;
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media (min-width:) {
  .c0 {
    width: 100%;
  }
}

<a
  className="c0"
  href="/"
  title="← Back to the homepage"
/>
`;
